Migrate CheckTestUtil's use of InstanceIdentifier
We are dealing strictly with DataObjectIdentifiers here, make sure we
express that in APIs.

Change-Id: I62334e14840d7686098daa0a37702f93c625b12b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>